--- a/project/analytics.html
+++ b/project/analytics.html
@@ -1,47 +1,55 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <style>
-  #rcorners2 {
-    border-radius: 25px;
-    border: 2px solid #73AD21;
-    padding: 20px; 
-    #width: 300px;
-    height: 350px;
-     
-}
-</style>
+    <title>Bootstrap Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <style>
+    #rcorners2 {
+        border-radius: 25px;
+        border: 2px solid #73AD21;
+        padding: 20px;
+        display:inline-block;
+        width: 500px;
+        height: 250px;
+    }
+    </style>
+    <script>
+    $(function() {
+        $(".option").hover(function() {
+                      this.style.backgroundColor = this.style.backgroundColor == 'goldenrod' ? 'white' : 'goldenrod';   
+                    }); 
+    })();
+
+    </script>
 </head>
 
 <body>
-<div class="jumbotron text-center">
-  <h1>Analytics</h1>
-</div>
+    <div class="jumbotron text-center">
+        <h1>Analytics</h1>
+    </div>
+    <div class="row text-center" >
+        <a href="admin.html">
+            <div class="option" id="rcorners2">
+                <h3> Bike Bookings Analytics</h3>
+            </div>
+        </a>
+        <div  class="option" id="rcorners2">
+            <h3> Bike Revenue Analytics</h3>
+        </div>
+    </div>
+    <div class="row text-center">
+        <div class="option" id="rcorners2">
+            <h3> Customer analytics</h3>
+        </div>
+        <div class="option" id="rcorners2">
+            <h3> Employee analytics</h3>
+        </div>
+    </div>
+</body>
 
-  <div class="row">
-    <a href="admin.html">
-	<div class="col-md-6" id="rcorners2">
-    <h3> Bike Bookings Analytics</h3>
-    </div>
-    </a>
-    <div class="col-md-6" id="rcorners2">
-    <h3> Bike Revenue Analytics</h3>
-    </div>
-  </div>
-  <div class="row">
-	<div class="col-md-6" id="rcorners2">
-	<h3> Customer analytics</h3>
-    </div>
-    <div class="col-md-6" id="rcorners2">
-	<h3> Employee analytics</h3>
-    </div>
- </div>
- </div>
-	
+</html>
