--- a/project/analytics.html
+++ b/project/analytics.html
@@ -43,9 +43,11 @@
         </div>
     </div>
     <div class="row text-center">
+      <a href="analyticsCustomer.html">
         <div class="option" id="rcorners2">
             <h3> Customer analytics</h3>
         </div>
+      </a>
         <div class="option" id="rcorners2">
             <h3> Employee analytics</h3>
         </div>
