more customer analytics

--- a/project/analyticsCustomer.html
+++ b/project/analyticsCustomer.html
@@ -39,13 +39,26 @@
 <br>
 <div class="row">
 	<div class="col-md-6">
- 		<form action="query4.php" method="POST">
- 			<input type="submit" value="Check number of bikes rented for all quarters for recent year" style="height:100px;width:500px" class="btn btn-success"/>
+ 		<form action="query-cust3.php" method="POST">
+ 			<input type="submit" value="Check number of customers who made bookings for all quarters for recent year" style="height:100px;width:500px" class="btn btn-success"/>
  		</form>
  	</div>
  	<div class="col-md-6">
- 		<form action="query5.php" method="POST">
- 			<input type="submit" value="Check number of bikes rented for all months for recent year" style="height:100px;width:500px" class="btn btn-success"/>
+ 		<form action="query-cust4.php" method="POST">
+ 			<input type="submit" value="Check number of customers who made bookings for all months for recent year" style="height:100px;width:500px" class="btn btn-success"/>
+ 		</form>
+ 	</div>
+</div>
+<br>
+<div class="row">
+	<div class="col-md-6">
+ 		<form action="query-cust6.php" method="POST">
+ 			<input type="submit" value="Check number of bikes rented for the most recent year per bike type per customer" style="height:100px;width:500px" class="btn btn-success"/>
+ 		</form>
+ 	</div>
+ 	<div class="col-md-6">
+ 		<form action="query-cust5.php" method="POST">
+ 			<input type="submit" value="Check number of bikes rented for each location for all years per customer" style="height:100px;width:500px" class="btn btn-success"/>
  		</form>
  	</div>
 </div>
