--- a/project/analytics.html
+++ b/project/analytics.html
@@ -33,14 +33,16 @@
         <h1>Analytics</h1>
     </div>
     <div class="row text-center" >
-        <a href="admin.html">
+        <a href="bookings.html">
             <div class="option" id="rcorners2">
                 <h3> Bike Bookings Analytics</h3>
             </div>
         </a>
+        <a href="revenue.html">
         <div  class="option" id="rcorners2">
             <h3> Bike Revenue Analytics</h3>
         </div>
+        </a>
     </div>
     <div class="row text-center">
       <a href="analyticsCustomer.html">
@@ -48,9 +50,7 @@
             <h3> Customer analytics</h3>
         </div>
       </a>
-        <div class="option" id="rcorners2">
-            <h3> Employee analytics</h3>
-        </div>
+       
     </div>
 </body>
 
