--- a/project/analyticsCustomer.html
+++ b/project/analyticsCustomer.html
@@ -20,7 +20,7 @@
 
 <body class="container">
 <div class="jumbotron text-center">
-  <h1>Customer Analytics</h1>
+  <h1>Customer</h1>
 </div>
 <div class="row">
 	<div class="col-md-6">
