--- a/project/bookings.html
+++ b/project/bookings.html
@@ -21,7 +21,7 @@
 
 <body class="container">
 <div class="jumbotron text-center">
-  <h1>Admin portal</h1>
+  <h1>Bookings</h1>
 </div>
 <div class="row">
 	<div class="col-md-6">
