--- a/project/revenue.html
+++ b/project/revenue.html
@@ -26,12 +26,12 @@
 <div class="row">
 	<div class="col-md-6">
 		<form action="revenue2.php" method="POST">
- 			<input type="submit" value="Check revenue of bikes rented across Bike Models for all years" style="height:100px;width:500px" class="btn btn-danger"/>
+ 			<input type="submit" value="Check revenue of bikes rented across Bike Models for all years" style="height:100px;width:580px" class="btn btn-primary"/>
  		</form>
  	</div>
  	<div class="col-md-6">
  		<form action="revenue1.php" method="POST">
- 			<input type="submit" value="Check revenue of bikes rented across Bike Types for all years" style="height:100px;width:500px" class="btn btn-danger"/>
+ 			<input type="submit" value="Check revenue of bikes rented across Bike Types for all years" style="height:100px;width:580px" class="btn btn-primary"/>
  		</form>
  	</div>
  
@@ -40,12 +40,12 @@
 <div class="row">
 	<div class="col-md-6">
  		<form action="revenue4.php" method="POST">
- 			<input type="submit" value="Check revenue of bikes rented for all quarters for recent year" style="height:100px;width:500px" class="btn btn-danger"/>
+ 			<input type="submit" value="Check revenue of bikes rented for all quarters for recent year" style="height:100px;width:580px" class="btn btn-primary"/>
  		</form>
  	</div>
  	<div class="col-md-6">
  		<form action="revenue5.php" method="POST">
- 			<input type="submit" value="Check revenue of bikes rented for all months for recent year" style="height:100px;width:500px" class="btn btn-danger"/>
+ 			<input type="submit" value="Check revenue of bikes rented for all months for recent year" style="height:100px;width:580px" class="btn btn-primary"/>
  		</form>
  	</div>
 </div>
@@ -53,12 +53,12 @@
 <div class="row">
    <div class="col-md-6">
  		<form action="revenue3.php" method="POST">
- 			<input type="submit" value="Check revenue of bikes rented for all years" style="height:100px;width:500px" class="btn btn-danger"/>
+ 			<input type="submit" value="Check revenue of bikes rented for all years" style="height:100px;width:580px" class="btn btn-primary"/>
  		</form>
  	</div>
 	<div class="col-md-6">
  		<form action="revenue6.php" method="POST">
- 			<input type="submit" value="Check revenue of bikes rented for each location for all years" style="height:100px;width:500px" class="btn btn-danger"/>
+ 			<input type="submit" value="Check revenue of bikes rented for each location for all years" style="height:100px;width:580px" class="btn btn-primary"/>
  		</form>
  	</div>
  	
@@ -67,12 +67,12 @@
 <div class="row">
 <div class="col-md-6">
  		<form action="revenue7.php" method="POST">
- 			<input type="submit" value="Check revenue of bikes rented for each location for all years per bike type" style="height:100px;width:500px" class="btn btn-danger"/>
+ 			<input type="submit" value="Check revenue of bikes rented for each location for all years per bike type" style="height:100px;width:580px" class="btn btn-primary"/>
  		</form>
  	</div>
 	<div class="col-md-6">
  		<form action="revenue8.php" method="POST">
- 			<input type="submit" value="Check revenue of bikes rented for each location for all years per bike type and bike model" style="height:100px;width:500px" class="btn btn-danger"/>
+ 			<input type="submit" value="Check revenue of bikes rented for each location for all years per bike type and bike model" style="height:100px;width:580px" class="btn btn-primary"/>
  		</form>
  	</div>
  	
