--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<li><a href="#intro">Intro</a></li>
 					
 					<li><a href="#team">Team</a></li>
-					<li><a href="#pricing">Pricing</a></li>
+					<li><a href="analytics.html">Analytics</a></li>
 					<li><a href="#services" class="btn btn-blue">Sign Up</a></li>
 				</ul>
 			</div>
