--- a/index.html
+++ b/index.html
@@ -54,11 +54,9 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right main-nav">
-					<li><a href="#intro">Intro</a></li>
-					
-					<li><a href="#team">Team</a></li>
-					<li><a href="analytics.html">Analytics</a></li>
-					<li><a href="#services" class="btn btn-blue">Sign Up</a></li>
+					<li><a href="#introduction" style="color:black">Intro</a></li>
+					<li><a href="analytics.html" style="color:black">Analytics</a></li>
+					<li><a href="#services" class="btn btn-blue" >Sign Up</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -154,65 +152,24 @@
 		</div>
 		<div class="cut cut-bottom"></div>
 	</section>
-	<section id="team" class="section gray-bg">
+	<section id="introduction" class="section section-padded">
 		<div class="container">
-			<div class="row title text-center">
-				<h2 class="margin-top">Team</h2>
-				<h4 class="light muted">We're a dream team!</h4>
-				
-			</div>
-			<div class="row">
-				<div class="col-md-4">
-					<div class="team text-center">
-						<div class="cover" style="background:url('img/team/team-cover1.jpg'); background-size:cover;">
-							<div class="overlay text-center">
-								<h3 class="white">$69.00</h3>
-								<h5 class="light light-white">1 - 5 sessions / month</h5>
-							</div>
-						</div>
-						<img src="img/team/team3.jpg" alt="Team Image" class="avatar">
-						<div class="title">
-							<h4>Ben Adamson</h4>
-							<h5 class="muted regular">Fitness Instructor</h5>
-						</div>
-						<button data-toggle="modal" data-target="#modal1" class="btn btn-blue-fill">Sign Up Now</button>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="team text-center">
-						<div class="cover" style="background:url('img/team/team-cover2.jpg'); background-size:cover;">
-							<div class="overlay text-center">
-								<h3 class="white">$69.00</h3>
-								<h5 class="light light-white">1 - 5 sessions / month</h5>
-							</div>
-						</div>
-						<img src="img/team/team1.jpg" alt="Team Image" class="avatar">
-						<div class="title">
-							<h4>Eva Williams</h4>
-							<h5 class="muted regular">Personal Trainer</h5>
-						</div>
-						<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue-fill ripple">Sign Up Now</a>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="team text-center">
-						<div class="cover" style="background:url('img/team/team-cover3.jpg'); background-size:cover;">
-							<div class="overlay text-center">
-								<h3 class="white">$69.00</h3>
-								<h5 class="light light-white">1 - 5 sessions / month</h5>
-							</div>
-						</div>
-						<img src="img/team/team2.jpg" alt="Team Image" class="avatar">
-						<div class="title">
-							<h4>John Phillips</h4>
-							<h5 class="muted regular">Personal Trainer</h5>
-						</div>
-						<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue-fill ripple">Sign Up Now</a>
-					</div>
-				</div>
+			<div class="row text-center title">
+				<h2>Intro</h2>
+				<div class="col-md-offset-3 col-md-6">
+			SJSU Bike rental is a one stop solution for renting a bike you love. 
+The application provides a bike of your choice for high performance ride in the city. 
+We guarantee reservation in the time and place as per the customer needs, and provide instant confirmation on the reservation. 
+We provide a wide range of bikes suiting all riding styles and terrain. 
+We as a team would be working towards building a safe and secure solution for online bike renting. 
+The application would cater to the requirements of both the customer and the admin.
+
+		</div>
 			</div>
 		</div>
+		<div class="cut cut-bottom"></div>
 	</section>
+	
 	
 	<!-- Holder for mobile navigation -->
 	<div class="mobile-nav">
