--- a/analytics.html
+++ b/analytics.html
@@ -71,11 +71,9 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right main-nav">
-					<li><a href="#intro">Intro</a></li>
+					<li><a href="#intro" style="color:black">Intro</a></li>
+					<li><a href="analytics.html" style="color:black">Analytics</a></li>
 					
-					<li><a href="#team">Team</a></li>
-					<li><a href="analytics.html">Analytics</a></li>
-					<li><a href="#services" class="btn btn-blue">Sign Up</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
