--- a/analyticsCustomer.html
+++ b/analyticsCustomer.html
@@ -17,6 +17,7 @@
 }
 .black-background {background-color:#000000;}
 .white {color:#ffffff;}
+.grey-background {background-color:#BFC2D1;}
 </style>
 </head>
 
@@ -27,12 +28,12 @@
 <div class="row">
 	<div class="col-md-6">
  		<form action="query-cust2.php" method="POST">
- 			<input type="submit" value="Check number of bikes rented by all customers for all years" style="height:100px;width:580px" />
+ 			<input type="submit" value="Check number of bikes rented by all customers for all years" style="height:100px;width:580px" class="grey-background" />
  		</form>
  	</div>
 	<div class="col-md-6">
 		<form action="query-cust1.php" method="POST">
- 			<input type="submit" value="Check  all customers who made maximum bookings for all years" style="height:100px;width:580px" />
+ 			<input type="submit" value="Check  all customers who made maximum bookings for all years" style="height:100px;width:580px" class="grey-background" />
  		</form>
  	</div>
  	
@@ -42,12 +43,12 @@
 <div class="row">
 	<div class="col-md-6">
  		<form action="query-cust3.php" method="POST">
- 			<input type="submit" value="Check number of customers who made bookings for all quarters for recent year" style="height:100px;width:580px" />
+ 			<input type="submit" value="Check number of customers who made bookings for all quarters for recent year" style="height:100px;width:580px" class="grey-background" />
  		</form>
  	</div>
  	<div class="col-md-6">
  		<form action="query-cust4.php" method="POST">
- 			<input type="submit" value="Check number of customers who made bookings for all months for recent year" style="height:100px;width:580px" />
+ 			<input type="submit" value="Check number of customers who made bookings for all months for recent year" style="height:100px;width:580px" class="grey-background" />
  		</form>
  	</div>
 </div>
@@ -55,12 +56,12 @@
 <div class="row">
 	<div class="col-md-6">
  		<form action="query-cust6.php" method="POST">
- 			<input type="submit" value="Check number of bikes rented for the most recent year per bike type per customer" style="height:100px;width:580px" />
+ 			<input type="submit" value="Check number of bikes rented for the most recent year per bike type per customer" style="height:100px;width:580px" class="grey-background" />
  		</form>
  	</div>
  	<div class="col-md-6">
  		<form action="query-cust5.php" method="POST">
- 			<input type="submit" value="Check number of bikes rented for each location for all years per customer" style="height:100px;width:580px" />
+ 			<input type="submit" value="Check number of bikes rented for each location for all years per customer" style="height:100px;width:580px" class="grey-background" />
  		</form>
  	</div>
 </div>
