--- a/revenue.html
+++ b/revenue.html
@@ -18,6 +18,7 @@
 }
 .black-background {background-color:#000000;}
 .white {color:#ffffff;}
+.grey-background {background-color:#BFC2D1;}
 </style>
 </head>
 
@@ -28,12 +29,12 @@
 <div class="row">
 	<div class="col-md-6">
 		<form action="revenue2.php" method="POST">
- 			<input type="submit" value="Check revenue of bikes rented across Bike Models for all years" style="height:100px;width:580px"/>
+ 			<input type="submit" value="Check revenue of bikes rented across Bike Models for all years" style="height:100px;width:580px" class="grey-background"/>
  		</form>
  	</div>
  	<div class="col-md-6">
  		<form action="revenue1.php" method="POST">
- 			<input type="submit" value="Check revenue of bikes rented across Bike Types for all years" style="height:100px;width:580px" />
+ 			<input type="submit" value="Check revenue of bikes rented across Bike Types for all years" style="height:100px;width:580px" class="grey-background" />
  		</form>
  	</div>
  
@@ -42,12 +43,12 @@
 <div class="row">
 	<div class="col-md-6">
  		<form action="revenue4.php" method="POST">
- 			<input type="submit" value="Check revenue of bikes rented for all quarters for recent year" style="height:100px;width:580px" />
+ 			<input type="submit" value="Check revenue of bikes rented for all quarters for recent year" style="height:100px;width:580px" class="grey-background" />
  		</form>
  	</div>
  	<div class="col-md-6">
  		<form action="revenue5.php" method="POST">
- 			<input type="submit" value="Check revenue of bikes rented for all months for recent year" style="height:100px;width:580px" />
+ 			<input type="submit" value="Check revenue of bikes rented for all months for recent year" style="height:100px;width:580px" class="grey-background" />
  		</form>
  	</div>
 </div>
@@ -55,12 +56,12 @@
 <div class="row">
    <div class="col-md-6">
  		<form action="revenue3.php" method="POST">
- 			<input type="submit" value="Check revenue of bikes rented for all years" style="height:100px;width:580px" />
+ 			<input type="submit" value="Check revenue of bikes rented for all years" style="height:100px;width:580px" class="grey-background" />
  		</form>
  	</div>
 	<div class="col-md-6">
  		<form action="revenue6.php" method="POST">
- 			<input type="submit" value="Check revenue of bikes rented for each location for all years" style="height:100px;width:580px" />
+ 			<input type="submit" value="Check revenue of bikes rented for each location for all years" style="height:100px;width:580px" class="grey-background" />
  		</form>
  	</div>
  	
@@ -69,12 +70,12 @@
 <div class="row">
 <div class="col-md-6">
  		<form action="revenue7.php" method="POST">
- 			<input type="submit" value="Check revenue of bikes rented for each location for all years per bike type" style="height:100px;width:580px" />
+ 			<input type="submit" value="Check revenue of bikes rented for each location for all years per bike type" style="height:100px;width:580px" class="grey-background" />
  		</form>
  	</div>
 	<div class="col-md-6">
  		<form action="revenue8.php" method="POST">
- 			<input type="submit" value="Check revenue of bikes rented for each location for all years per bike type and bike model" style="height:100px;width:580px" />
+ 			<input type="submit" value="Check revenue of bikes rented for each location for all years per bike type and bike model" style="height:100px;width:580px" class="grey-background" />
  		</form>
  	</div>
  	
